# shannon_cpp

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Contig_graph_handler.cpp  Contig_graph_handler.h  Contig_handler.cpp  Kmer_handler.cpp  Makefile  README.md  Shannon_RNASeq_Cpp  cmake_install.cmake  default_setting  encoding.cpp  log.h  main.cpp  run_batch.py  setting  setting_default  setting_medium  setting_mouse_new_hash  setting_mouse_new_hash_parallel  shannon_C_setting  shc_google_sparsehash.h  shc_type.h  syrupy.py
Rcorrector/: rcorrector
analysis/: compare_trans.py  fetch_all_supportive_reads.py  fetch_comp_supportive_reads.py  fetch_supportive_reads_by_header.py  parallel_blat_python.py  run_parallel_cmds.py  shannon_support_read_finders.py  tester.py  validate_installation.py
back/: Fasta_entry.cpp  Fasta_entry.h  Fasta_reader.cpp  Fasta_reader.h
log/: default_shannonC_log  default_shannonC_log~
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
output/: contig (copy).txt  contig (copy).txt~  contig.txt  contig.txt~  contig_without_filter (copy).txt  contig_without_filter.txt  filter_contig.txt  isolated_contig.graph  metis_data (copy).graph  metis_data.graph
output/components_kmer/: kmer0  kmer1  kmer10  kmer11  kmer12  kmer13  kmer14  kmer15  kmer16  kmer17  kmer18  kmer19  kmer2  kmer20  kmer21  kmer22  kmer23  kmer24  kmer25  kmer26  kmer27  kmer28  kmer29  kmer3  kmer30  kmer31  kmer4  kmer5  kmer6  kmer7  kmer8  kmer9
output/components_reads/: comp0  comp1  comp10  comp11  comp12  comp13  comp14  comp15  comp16  comp17  comp18  comp19  comp2  comp20  comp21  comp22  comp23  comp24  comp25  comp26  comp27  comp28  comp29  comp3  comp30  comp31  comp4  comp5  comp6  comp7  comp8  comp9
src/: Collect_reads.h  Comp_read_list.h  Contig_graph_handler.cpp  Contig_graph_handler.h  Contig_handler.cpp  Contig_handler.h  File_dumper.h  Kmer_handler.cpp  Kmer_handler.h  Multi_graph_handler.cpp  Multi_graph_handler.h  Multibridge_handler.cpp  Multibridge_handler.h  Read_subsampler.h  Seq_gragh_type.h  Sequence_graph_handler.cpp  Sequence_graph_handler.h  Single_read_list.h  Sparse_flow_handler.cpp  Sparse_flow_handler.h  basic_log.cpp  basic_log.h  encoding.cpp  encoding.h  json_parser.cpp  json_parser.cpp~  json_parser.h  json_parser.h~  local_file_structure.cpp  local_file_structure.h  log.cpp  log.h  main.cpp  main.cpp~  run_tasks.cpp  run_tasks.h  shannon_C_seq_helper.cpp  shannon_C_seq_helper.h  shc_google_sparsehash.h  shc_setting.h  (+1 more)
test_data/: du  g.dict  k1mer.dict  k1mer.dict_org  kmer_contig.dict  kmer_read.dict
